# IDK-Engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.bat  build.sh  cmake_install.cmake  config.txt  export.txt  game  gmon.out  imgui.ini  loc.sh  pit-smellers  scene.txt  test.py
LuaScripting/: engine.lua  main.lua
LuaScripting/engine/: internal.lua  player.lua
LuaScripting/engine/io/: io.lua
LuaScripting/engine/vector/: vector.lua
LuaScripting/scripts/: default.lua  e1.lua  e2.lua  entry.lua  s1.lua  scene_entry.lua  spin.lua  transition.lua
LuaScripting/scripts/ai/: followplayer.lua  rotate.lua
LuaScripting/scripts/enemy/: follow_player.lua
LuaScripting/scripts/environment/: sun.lua
LuaScripting/scripts/gondola/: activation.lua  control.lua  move.lua  parent.lua
LuaScripting/scripts/player/: gravity.lua  keypress.lua
assets/: index.txt
assets/block/: block.mtl
assets/crate/: crate.mtl
assets/cube/: cube.mtl  ground.mtl  gun.mtl  skybox.mtl
assets/environment/baby/: asset.txt  baby1.mtl
assets/environment/boye/: asset.txt  boye2.mtl  collision.mtl
assets/environment/building/: asset.txt  building.dae  building.glb  building.gltf  building.mtl
assets/environment/building2/: asset.txt  building2.blend
assets/environment/building3/: asset.txt  building3.dae
assets/environment/bunker/: asset.txt
assets/environment/cube/: asset.txt  cube.dae  cube.glb
assets/environment/ground/: asset.txt  ground2.mtl
assets/environment/skybox/: asset.txt  skybox.dae
assets/environment/terrain0/: asset.txt  ground.dae
assets/environment/terrain1/: asset.txt  collision.mtl  ground2.dae  ground2.mtl  nav.mtl  terrain1.blend  terrain1.blend1
assets/environment/terrain2/: asset.txt
assets/environment/tree/: asset.txt  bend3.mtl  tree1.mtl
assets/environment/wall/: asset.txt  collision.mtl  wall.blend  wall.blend1  wall.dae
assets/fish/: fish.mtl
assets/gameobjects/gun/: gun.mtl
assets/ground/: ground.mtl  ground.mtl.mtl  ground2.mtl  nav.mtl
assets/gun/: gun.mtl
assets/map/: benchmark.mtl
assets/misc/blendingtest/: asset.txt  building.dae  cube.dae  light.dae
assets/misc/empty/: asset.txt
assets/misc/player/: asset.txt
assets/misc/pointlight/: sphere.dae  sphere.mtl
assets/misc/pointlightcontainer/: asset.txt
assets/misc/sphere/: asset.txt  sphere.dae
assets/misc/spotlight/: asset.txt
assets/misc/thang/: asset.txt  thang.dae
assets/model/: cube.mtl  fish.mtl  ground.mtl  ground2.mtl  gun.mtl
assets/npc/baby/: asset.txt
assets/npc/fren/: asset.txt  fren.dae  fren4.mtl
assets/npc/muscleskele/: asset.txt  muscleskele.dae  muscleskele2.dae
assets/player/gun/: asset.txt
assets/props/table/: asset.txt  table.dae
assets/raw assets/: building1.blend  building1.blend1  enemy.blend  enemy.blend1  ground.blend  ground.blend1  ground2.blend  ground2.blend1  gun.blend  gun.blend1
assets/scenes/: blend.scene  dirlighttest.scene  dirrlighttest.scene  entry.scene  scene1.scene  scene2.scene
assets/scenes/area1/: a1m1.scene
assets/shaders/: additive.fs  additive.vs  backgroundquad.fs  backgroundquad.vs  basic.glsl  basic_viewspace.glsl  basic_worldspace.glsl  blankgeometry.gs  blur.fs  blur.vs  dirshadow.fs  dirshadow.vs  explode.gs  fxaa.fs  gbuffer.fs  gbuffer.vs  gbuffer_geometry.fs  gbuffer_lighting.fs  guassianblur.fs  guassianblur.vs  lightsource.fs  lightsource.glsl  lightsource.vs  normals.fs  normals.vs  pointshadow.gs  pointshadow.vs  renderquad.fs  renderquad.vs  screenquad.fs  screenquad.vs  shadowmap.fs  shadowmap.vs  skybox.fs  skybox.vs  terrain.fs  terrain.vs  terrian.fs  texture_to_quad.fs  tonemap.fs  (+10 more)
assets/shaders/blur/: blur_downsample.fs  blur_upsample.fs
assets/shaders/color correction/: gamma.fs  tonemap.fs
assets/shaders/debug/: wireframe.fs  wireframe.vs
assets/shaders/gbuffer_geometrypass/: actor.fs  actor.vs  actor_animated.fs  actor_animated.vs  background.fs  background.vs  billboard.fs  billboard.vs  billboard_fixed.fs  billboard_fixed.vs  billboard_follow.vs  terrain.fs  terrain.vs
assets/shaders/gbuffer_lightingpass/: actor.fs  gbuffer_lighting.fs  gbuffer_lighting.vs  terrain.fs  terrain.vs
assets/shaders/shadowmap/: dirshadow.fs  dirshadow.vs  dirshadow_animated.fs  dirshadow_animated.vs  pointshadow_animated.fs  pointshadow_animated.vs  test.vs
assets/sphere/: sphere.mtl
docs/: README.md
src/: input.cpp  keylog.h  main.cpp  model.cpp  model.h  pyembed.cpp  pyembed.h  renderer.cpp  renderer.h  scene.cpp  scene.h  transform.h  ui.cpp  ui.h
src/EditorUI/: EditorUI.cpp  EditorUI.h
src/EditorUI/tabs/: tabs.h
src/Game/: Game.h
src/Game/GameUI/: GameUI.cpp  (+1 more)
src/GameEngine/: GameEngine.cpp  GameEngine.h  collision.cpp  common.h  gameobject.cpp  gameobject.h  navmesh.cpp  navmesh.h  objecthandler.cpp  objecthandler.h  physics.cpp  physics.h  player.cpp  player.h  scenegraph.cpp  scenegraph.h  scenenode.h  state.h  util.h  weapon.cpp  weapon.h
src/GraphicsEngine/: GraphicsEngine.h  animation.cpp  animation.h  camera.cpp  camera.h  frustum.h  glcall.h  lightsource.cpp  lightsource.h  material.h  mesh.cpp  mesh.h  model copy.cpp  model.cpp  model.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h
src/LuaScripting/: engine.lua  luainterface.cpp  luainterface.h  luascripting.cpp  luascripting.h  main.lua
src/audio/: AudioEngine.h  audio.cpp  audio.h  sound.cpp  sound.h
src/scene/: scene.cpp  scene.h  scenenamepsace.cpp
src/scripting/: library.cpp  luainterface.cpp  luainterface.h  luascripting.cpp  luascripting.h  toCPP.cpp  toLua.cpp
src/shaders/: basic.glsl
src/ui/: UIEngine.cpp  UIEngine.h  filebrowser.cpp  filebrowser.h  iconlabels.cpp  menubar.cpp  scene_tab.cpp  ui.cpp  ui.h
(+300 files in other folders)
